syntax = "proto3";

package applications.grpc.pox.v1;

message PostProcessContentEvent {
  string postId = 1;
  string prefix = 2;
  repeated string content = 3;
}

message PostPublishContentEvent {
  string postId = 1;
  string prefix = 2;
  repeated string content = 3;
}